@@ -437,7 +437,7 @@ void Control::doLoadSavePanel(void) {
 
 	_savedMouse = _skyMouse->giveCurrentMouseType();
 	_savedCharSet = _skyText->giveCurrentCharSet();
-	_skyText->fnSetFont(1);
+	_skyText->fnSetFont(2);
 	_skyMouse->spriteMouse(MOUSE_NORMAL, 0, 0);
 	_lastButton = -1;
 	_curButtonText = 0;
@@ -462,7 +462,7 @@ void Control::doControlPanel(void) {
 	initPanel();
 
 	_savedCharSet = _skyText->giveCurrentCharSet();
-	_skyText->fnSetFont(1);
+	_skyText->fnSetFont(2);
 
 	_skyScreen->clearScreen();
 	if (SkyEngine::_systemVars.gameVersion < 331)
@@ -1493,7 +1493,7 @@ uint16 Control::quickXRestore(uint16 slot) {
 	_mouseClicked = false;
 
 	_savedCharSet = _skyText->giveCurrentCharSet();
-	_skyText->fnSetFont(1);
+	_skyText->fnSetFont(2);
 
 	_system->copyRectToScreen(_screenBuf, GAME_SCREEN_WIDTH, 0, 0, FULL_SCREEN_WIDTH, FULL_SCREEN_HEIGHT);
 	_system->updateScreen();
